--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,8 +64,8 @@ services:
       OUTPUT_TOPIC: mptcp-joined
       KAFKA_ADDRESS: kafka:9092
       JOIN_WINDOW_TIME: 120
-      LOG_MPTCP: false
-      LOG_FLOW: false
-      LOG_JOINED: true
+      LOG_MPTCP: 'false'
+      LOG_FLOW: 'false'
+      LOG_JOINED: 'true'
     depends_on:
       - kafka
