--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,8 +64,8 @@ services:
       OUTPUT_TOPIC: mptcp-joined
       KAFKA_ADDRESS: kafka:9092
       JOIN_WINDOW_TIME: 120
-      LOG_MPTCP: 'false'
-      LOG_FLOW: 'false'
+      LOG_MPTCP: 'true'
+      LOG_FLOW: 'true'
       LOG_JOINED: 'true'
       ADDRESS_WHITELIST: '193.196.37.204,193.196.38.233,192.168.1.220,193.196.38.1,2001:7c0:2310:0:f816:3eff:fe4f:e553,2001:7c0:2310:0:f816:3eff:fe76:45a2'
     depends_on:
